test/rules/single_criterion/high_risk_service_account/risky_role_any_action_workload/policy.yaml
apiVersion: policies.kubewarden.io/v1
kind: ClusterAdmissionPolicy
metadata:
  name: neuvector-rule-1000-conversion
spec:
  backgroundAudit: true
  mode: protect
  module: registry://ghcr.io/kubewarden/policies/high-risk-service-account:v0.1.2
  mutating: false
  policyServer: default
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
  - apiGroups:
    - apps
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - deployments
    - replicasets
    - daemonsets
    - statefulsets
  - apiGroups:
    - batch
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - jobs
    - cronjobs
  settings:
    blockRules:
    - apiGroups:
      - ""
      resources:
      - pods
      - pods/log
      verbs:
      - "*"
    - apiGroups:
      - apps
      resources:
      - deployments
      - statefulsets
      - daemonsets
      - replicasets
      verbs:
      - "*"
    - apiGroups:
      - batch
      resources:
      - jobs
      - cronjobs
      verbs:
      - "*"
    - apiGroups:
      - autoscaling
      resources:
      - horizontalpodautoscalers
      verbs:
      - "*"
status:
  policyStatus: ""
